# booklet

./: .gitignore  README.md  booklet.py  pyproject.toml
.github/workflows/: release.yml
