[tool.poetry]
name = "booklet"
version = "0.1.0"
description = "PDF to printable booklet utility."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^1.26.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
